--- a/_config.yml
+++ b/_config.yml
@@ -18,11 +18,11 @@ remote_theme: kitian616/jekyll-TeXt-theme # Jekyll Remote Theme, see https://git
 ##############################
 text_skin: default # "default" (default), "dark", "forest", "ocean", "chocolate", "orange"
 highlight_theme: tomorrow-night-eighties # "default" (default), "tomorrow", "tomorrow-night", "tomorrow-night-eighties", "tomorrow-night-blue", "tomorrow-night-bright"
-url: # the base hostname & protocol for your site e.g. https://www.someone.com
+url: https://mrxhub.me # the base hostname & protocol for your site e.g. https://www.someone.com
 baseurl: # does not include hostname
 title: Lancer's Blog
 description: > # this means to ignore newlines until "Language & timezone"
-  A man who wants to change the world.
+  「当你停止尝试时,就是失败的时候」
 
 ## => Language and Timezone
 ##############################
