--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ text_skin: default # "default" (default), "dark", "forest", "ocean", "chocolate"
 highlight_theme: tomorrow-night-eighties # "default" (default), "tomorrow", "tomorrow-night", "tomorrow-night-eighties", "tomorrow-night-blue", "tomorrow-night-bright"
 url: https://mrxhub.me # the base hostname & protocol for your site e.g. https://www.someone.com
 baseurl: # does not include hostname
-title: Lancer's Blog
+title: Brain Garden
 description: > # this means to ignore newlines until "Language & timezone"
   「当你停止尝试时,就是失败的时候」
 
